username overflow fix

--- a/client/src/components/sightingAsText/sightingAsText.sass
+++ b/client/src/components/sightingAsText/sightingAsText.sass
@@ -27,17 +27,27 @@
 	display: flex
 	flex-direction: row
 
+#cardUser
+	width: 65%
+
 #cardLocation div
 	font-size: x-large
 
 #cardUser div
 	font-size: x-large
+	overflow: hidden
+	text-overflow: ellipsis
+	white-space: nowrap
+	margin-top: 1px
+
+/** #cardUsername
+	overflow: hidden
+	text-overflow: ellipsis
+	white-space: nowrap **/
 
 #time
 	text-align: right
-	display: flex
-	flex-direction: column
-	justify-content: flex-end
+	margin-top: 10px
 
 .Sighting-Image
 	//height: 250px
